--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -145,7 +145,7 @@ body{
     width:50px;
     height:50px;
     text-align:center;
-    line-height:50px;
+    line-height:45px;
 }
 
 .footer p{
@@ -192,7 +192,7 @@ body{
 .footer-socials a i{
     width:35px;
     height:35px;
-    line-height:35px;
+    line-height:30px;
 }
 
 .footer-facebook{
@@ -282,6 +282,8 @@ body{
     -webkit-transform:translateY(0px);
     transition:all 250ms ease-in-out;
     border-bottom:solid 1px rgba(0,0,0,0.1);
+    background-image:url(../images/header.png);
+    background-position: 690px -15px; 
 }
 
 .header-clear{
@@ -307,7 +309,7 @@ body{
 }
 
 .main-logo{
-    background-image:url(../images/logo-dark.png);
+/*    background-image:url(../images/logo-dark.png);*/
     width:110px;
     height:18px;
     background-size:110px 18px;
